--- a/src/blocks.01-base/fi/font/fi.html
+++ b/src/blocks.01-base/fi/font/fi.html
@@ -72,6 +72,24 @@
 
         <div class="preview">
             <span class="inner">
+                <i class=" icon-information"></i>
+            </span>
+            <br>
+            <span class='label'>information</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class=" icon-myStar"></i>
+            </span>
+            <br>
+            <span class='label'>myStar</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class=" icon-star"></i>
             </span>
             <br>
